added some fixes

--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -15,7 +15,7 @@
 .img-container {
     height: 370px;
     width: 420px;
-    background-image: url("./src/assets/bars.png");
+    background-image: url("./public/bars.png");
     background-size: cover; /* Изображение покрывает весь элемент */
     background-position: center; /* Центрирование изображения */
     background-repeat: no-repeat; /* Избегаем повторения изображения */
